cholera 0.7.9.9054
==================

- Voronoi experiment.


cholera 0.7.9.9053
==================

- amend landmarksPDF() and latlongLandmarks() prototypes for OSM coordinates.
- add prototype latitude and longitude to landmarks data frame.


cholera 0.7.9.9052
==================

- fix latlongAddress(), latlongFatalities(), latlongPumps() and latlongRoads()
  to allow replication.
- add latlongFatalitiesUnstacked().


cholera 0.7.9.9051
==================

- migrate from 'raster' to 'terra'.


cholera 0.7.9.9050
==================

- amend latlongWalkingPath() prototype for OSM coordinates.


cholera 0.7.9.9049
==================

- amend latlongEmbed() for OSM coordinates.


cholera 0.7.9.9048
==================

- fix addVoronoi(color).


cholera 0.7.9.9047
==================

- amend latlongOrthoPump() for OSM coordinates.


cholera 0.7.9.9046
==================

- add/set snowMap(latlong = FALSE).
- add experimental longitude and latitude to fatalities.unstacked.
- add/set roadSegments(latlong = FALSE).


cholera 0.7.9.9045
==================

- add experimental longitude and latitude to fatalities, fatalities.address,
  roads, pumps and pumps.vestry.
- remove outdated prototype lat/long data.


cholera 0.7.9.9044
==================

- add orthoProjPumpPDF().
- amend pumpsPDF() and subsetPDF().


cholera 0.7.9.9043
==================

- add non-address fatalities to latlongSnowMap().
- use inherits() instead of class().


cholera 0.7.9.9042
==================

- add latlongFatalities() for OSM coordinates.


cholera 0.7.9.9041
==================

- add thresholdFataltiesGraph().
- add fatalitiesGraphData().
- add partitionFatalities() prototype.
- add partitionFatalitiesPDF().


cholera 0.7.9.9040
==================

- add partitionOrthoAddressesPDF().
- amend latlongOrthoAddress() for OSM coordinates.


cholera 0.7.9.9039
==================

- add partitionAddressesPDF().
- amend latlongAddress() for OSM coordinates.


cholera 0.7.9.9038
==================