@@ -1,0 +1,20 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/data.R
+\docType{data}
+\name{voronoi.polygons.vestry}
+\alias{voronoi.polygons.vestry}
+\title{Coordinates of Voronoi polygon vertices for Vestry Report map.}
+\format{
+A list of 14 data frames frames with 2 variables.
+\describe{
+  \item{\code{x}}{x-coordinate}
+  \item{\code{y}}{y-coordinate}
+}
+}
+\usage{
+voronoi.polygons.vestry
+}
+\description{
+Coordinates of Voronoi polygon vertices for Vestry Report map.
+}
+\keyword{datasets}
