@@ -2,6 +2,7 @@ cholera 0.7.9.9054
 ==================
 
 - Voronoi experiment.
+- add voronoi.polygons and voronoi.polygons.vestry data.
 
 
 cholera 0.7.9.9053
